basic type/palette setup

--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "gatsby": "^0.12.22",
     "lodash": "^4.17.2",
     "moment": "^2.17.1",
+    "palette-generator": "^1.1.0",
     "react-addons-shallow-compare": "^15.4.1",
     "react-dates": "^4.1.0",
     "react-helmet": "^3.2.2",
+    "style-inject": "^0.1.1",
+    "styled-components": "^1.4.3",
+    "to-css": "^1.2.1",
+    "typescale": "0.0.8",
     "underscore.string": "^3.2.3"
   },
   "homepage": "http://silverpond.com.au/silverpond-website/",
