--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "gatsby": "^0.12.22",
     "lodash": "^4.17.2",
     "moment": "^2.17.1",
+    "mustache": "^2.3.0",
+    "node-rest-client": "^2.5.0",
     "normalize.css": "^5.0.0",
     "palette-generator": "^1.1.0",
     "react-addons-shallow-compare": "^15.4.1",
