--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "dateformat": "^2.0.0",
     "gatsby": "^0.12.22",
+    "google-map-react": "^0.22.3",
     "lodash": "^4.17.2",
     "moment": "^2.17.1",
     "mustache": "^2.3.0",
