--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mustache": "^2.3.0",
     "node-rest-client": "^2.5.0",
     "normalize.css": "^5.0.0",
+    "object-hash": "^1.1.6",
     "palette-generator": "^1.1.0",
     "react-addons-shallow-compare": "^15.4.1",
     "react-dates": "^4.1.0",
