--- a/.travis.yml
+++ b/.travis.yml
@@ -32,5 +32,5 @@ addons:
 # script needed to test, because defaults don't work on osx
 script:
   - npm install
-  - gatsby build
+  - gatsby build --prefix-links
   - bash ./deploy.sh
