added babel-eslint to support eslint-watch

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "build": "gatsby build"
   },
   "devDependencies": {
+    "babel-eslint": "^7.2.1",
     "eslint": "^3.17.1",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
