--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "fs-extra": "^2.1.2",
     "gatsby": "^0.12.39",
     "google-map-react": "^0.22.3",
+    "halogen": "^0.2.0",
+    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.2",
     "moment": "^2.17.1",
     "mustache": "^2.3.0",
@@ -18,6 +20,7 @@
     "normalize.css": "^5.0.0",
     "object-hash": "^1.1.7",
     "palette-generator": "^1.1.0",
+    "pluralize": "^4.0.0",
     "react-addons-shallow-compare": "^15.4.1",
     "react-dates": "^4.1.0",
     "react-helmet": "^3.3.2",
