fixed flow/lint errors

--- a/.flowconfig
+++ b/.flowconfig
@@ -27,3 +27,5 @@ node_modules/styled-components/flow-typed/lodash_v4.x.x.js
 node_modules/styled-components/flow-typed/inline-style-prefixer_vx.x.x.js
 
 [options]
+module.name_mapper='^components\(.*\)$' -> '<PROJECT_ROOT>/components/\1'
+module.name_mapper='^lib\(.*\)$' -> '<PROJECT_ROOT>/lib/\1'
