--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "flow-watch": "flow-watch"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "babel-eslint": "^7.2.1",
+    "babel-preset-flow": "^6.23.0",
     "eslint": "^3.17.1",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
