--- a/package.json
+++ b/package.json
@@ -7,12 +7,7 @@
     "url": "https://github.com/silverpond/silverpond-website/issues"
   },
   "homepage": "http://silverpond.com.au/silverpond-website/",
-  "keywords": [
-    "Silverpond",
-    "AI",
-    "Deep learning",
-    "Machine learning"
-  ],
+  "keywords": ["Silverpond", "AI", "Deep learning", "Machine learning"],
   "license": "MIT",
   "main": "n/a",
   "repository": {
@@ -21,7 +16,8 @@
   },
   "scripts": {
     "dev": "gatsby develop",
-    "lint": "./node_modules/.bin/eslint --ext .js,.jsx --ignore-pattern public .",
+    "lint":
+      "./node_modules/.bin/eslint --ext .js,.jsx --ignore-pattern public .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "develop": "gatsby develop",
     "build": "gatsby build"
@@ -37,18 +33,18 @@
   },
   "dependencies": {
     "fs-extra": "^4.0.1",
-    "gatsby": "^1.9.14",
-    "gatsby-link": "^1.6.14",
+    "gatsby": "^1.9.18",
+    "gatsby-link": "^1.6.15",
     "gatsby-plugin-resolve-src": "^1.0.0",
-    "gatsby-plugin-sharp": "^1.0.0-beta.7",
-    "gatsby-remark-copy-linked-files": "^1.0.0-beta.6",
-    "gatsby-remark-images": "^1.0.0-beta.6",
-    "gatsby-remark-prismjs": "^1.0.0-beta.6",
-    "gatsby-remark-responsive-iframe": "^1.0.0-beta.6",
-    "gatsby-remark-smartypants": "^1.0.0-beta.6",
-    "gatsby-source-filesystem": "^1.4.7",
-    "gatsby-transformer-remark": "^1.0.0-beta.6",
-    "gatsby-transformer-sharp": "^1.6.2",
+    "gatsby-plugin-sharp": "^1.6.4",
+    "gatsby-remark-copy-linked-files": "^1.5.5",
+    "gatsby-remark-images": "^1.5.8",
+    "gatsby-remark-prismjs": "^1.2.6",
+    "gatsby-remark-responsive-iframe": "^1.4.6",
+    "gatsby-remark-smartypants": "^1.4.6",
+    "gatsby-source-filesystem": "^1.4.9",
+    "gatsby-transformer-remark": "^1.7.5",
+    "gatsby-transformer-sharp": "^1.6.3",
     "google-map-react": "^0.24.0",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.2",
@@ -56,18 +52,14 @@
     "mustache": "^2.3.0",
     "node-rest-client": "^3.1.0",
     "normalize.css": "^7.0.0",
-    "object-hash": "^1.1.7",
     "palette-generator": "^1.1.0",
     "pluralize": "^7.0.0",
-    "react-addons-shallow-compare": "^15.4.1",
-    "react-dates": "^12.5.1",
     "react-helmet": "^5.2.0",
     "string": "^3.3.3",
     "style-inject": "^0.1.1",
     "styled-components": "^2.1.2",
     "to-css": "^1.2.1",
     "to-style": "^1.3.3",
-    "typescale": "0.0.9",
-    "underscore.string": "^3.2.3"
+    "typescale": "0.0.9"
   }
 }
